[package]
name = "md-inc"
version = "0.1.0"
authors = ["Marty Papamanolis <marty@mindpipes.com>"]
edition = "2018"
description = "Include files in Markdown docs"
repository = "https://github.com/martypapa/md-inc"
readme = "README.md"
license-file = "LICENSE"


[dependencies]
structopt = "0.3.14"
serde = "^1.0"
toml = "0.5.6"
serde_derive = "^1.0"
regex = "1.3.7"
anyhow = "1.0.31"
glob = "0.3.0"
nom = "5.1.1"