[package]
name = "md-inc"
version = "0.3.0"
authors = ["Marty Papamanolis <marty@mindpipes.com>"]
edition = "2018"
description = "Include files in Markdown docs"
repository = "https://github.com/martypapa/md-inc"
readme = "README.md"
license-file = "LICENSE"


[dependencies]
# Parsing commands
nom = "5.1.1"

# For "match" command
regex = "1.3.7"

# Error handling
anyhow = "1.0.31"

# For parsing Args
structopt = "0.3.14"

# Reading config files
toml = "0.5.6"
serde = "^1.0"
serde_derive = "^1.0"

# Parsing directories
glob = "0.3.0"


